<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_animal_detail_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnimalDetailPage"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img_animal_photo"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:adjustViewBounds="true" />
        </FrameLayout>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="5dp">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@android:color/black"
                    android:text="@string/scientific_name"/>
                <TextView
                    android:id="@+id/tv_animal_scientific_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:textColor="@android:color/black"
                    android:text="@string/scientific_name_text"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@android:color/black"
                    android:text="@string/animal_class"/>
                <TextView
                    android:id="@+id/tv_animal_class"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:textColor="@android:color/black"
                    android:text="@string/class_text"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@android:color/black"
                    android:text="@string/order"/>
                <TextView
                    android:id="@+id/tv_animal_order"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:textColor="@android:color/black"
                    android:text="@string/order_text"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@android:color/black"
                    android:text="@string/family"/>
                <TextView
                    android:id="@+id/tv_animal_family"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:textColor="@android:color/black"
                    android:text="@string/family_text"/>
            </TableRow>
        </TableLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/black"
            android:text="@string/description"/>
        <TextView
            android:id="@+id/tv_animal_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:text="@string/description_text"/>
    </LinearLayout>
</ScrollView>